--- a/pom.xml
+++ b/pom.xml
@@ -38,4 +38,21 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.sun.xml.ws</groupId>
+                <artifactId>jaxws-maven-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <wsdlUrls>
+                      <!--  <wsdlUrl>http://localhost:8090/teamservice/user/?wsdl</wsdlUrl> -->
+                    </wsdlUrls>
+                    <keep>true</keep>
+                    <packageName>router.client.generated</packageName>
+                    <sourceDestDir>src/main</sourceDestDir>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
