implementing admin console and user list

--- a/pom.xml
+++ b/pom.xml
@@ -51,13 +51,12 @@
                 <version>2.3.2</version>
                 <configuration>
                     <wsdlUrls>
-                      <!--  <wsdlUrl>http://localhost:8090/teamservice/user/?wsdl</wsdlUrl>
+                        <wsdlUrl>http://localhost:8090/teamservice/user/?wsdl</wsdlUrl>
 
-                      -->
                     </wsdlUrls>
                     <keep>true</keep>
                     <packageName>router.client.generated</packageName>
-                    <sourceDestDir>src/main</sourceDestDir>
+                    <sourceDestDir>src/main/java</sourceDestDir>
                 </configuration>
             </plugin>
         </plugins>
